fix: replace Stream::toList with collect